Registering Structure and Class Loader Allocation - Created table structure to register classloader, classpath, class segment - Registering functions exposed - ImageTableHeaders with SRP to table locations - JVMImageData structure to dump image - Error handling using Enums for exposed functions - Modified Cmakelists - Increased initial size of heap - Trace points for registering and suballocation
Signed-off-by: Akshay Ben akshayben@ibm.com

--- a/runtime/cfdumper/CMakeLists.txt
+++ b/runtime/cfdumper/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(cfdump
 
 	${j9vm_BINARY_DIR}/vm/ut_j9vm.c
 	${j9vm_SOURCE_DIR}/vm/stringhelpers.cpp
+	${j9vm_SOURCE_DIR}/vm/JVMImage.cpp
 	${j9vm_SOURCE_DIR}/vm/KeyHashTable.c
 	${j9vm_SOURCE_DIR}/vm/ModularityHashTables.c
 	${j9vm_SOURCE_DIR}/vm/dllsup.c
